tests/NormalTests/paczka1/fuzzy1/70580642.err
Error in line 10: ABgJVuuuP2 S251 2,0
Error in line 7: XOBgiFac7 S251 66,0
Error in line 19: XOBgiFac7 A854 96,5
Error in line 29: A854 A854 31,9
